style.css
/* Normalize CSS start */

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
font,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-weight: inherit;
    font-style: inherit;
    font-size: 100%;
    font-family: inherit;
    vertical-align: baseline;
}

/* remember to define focus styles! */
:focus {
    outline: 0;
}

body {
    line-height: 1.4;
    color: black;
    background: white;
}

ol,
ul {
    list-style: none;
}

/* tables still need 'cellspacing="0"' in the markup */
table {
    border-collapse: separate;
    border-spacing: 0;
}

caption,
th,
td {
    text-align: left;
    font-weight: normal;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
    content: "";
}

blockquote,
q {
    quotes: """";
}

* {
    box-sizing: border-box;
    font-family: 'Roboto Condensed', sans-serif;
}

a {
    text-decoration: none;
    color: black;
}

/* End of Normalize */

body {
    overflow-x: hidden;
    font-size: 16px;
}


.wrap {
    display: grid;
    grid-template-columns: 1fr;
    max-width: 1280px;
    row-gap: 5vh;
    margin: 0 auto;
    overflow-x: hidden;
}

header {
    height: 100vh;
    min-height: 360px;
    position: relative;
}

.burger {
    position: fixed;
    top: 40px;
    right: 20px;
    width: 40px;
    height: 40px;
    border: 2px solid black;
    border-radius: 50%;
    cursor: pointer;
    background-color: white;
    z-index: 100;
}

.burger i {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 0;
    font-size: 1.25rem;
    transition: .2s linear;
}

.burger i.active {
    opacity: 1;
    transition-delay: .2s;
}

nav {
    position: fixed;
    top: 0;
    left: 50%;
    transform: translate(-50%, -95%);
    width: 50vw;
    height: 50vh;
    min-height: 200px;
    text-align: center;
    border: 1px solid black;
    border-top: none;
    background-color: rgb(255, 242, 212);
    z-index: 100;
    transition: .3s linear;
}

nav.active {
    transform: translate(-50%, 0);
}

nav ul {
    display: flex;
    flex-wrap: wrap;
    height: 100%;
    width: 100%;
}

nav li {
    width: 100%;
    height: 25%;
}

nav a {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    text-transform: uppercase;
    font-size: 1rem;
    font-weight: bold;
    transition: .2s linear;
}

nav a:hover {
    background-color: rgb(255, 255, 255);
}

header::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 360px;
    background-image: url(/images/tatazachod.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    /* filter: sepia(70%) ; */
    z-index: -100;
}

.title {
    position: absolute;
    bottom: 25%;
    left: 0;
    width: 100%;
    height: 15%;
    background-color: rgba(255, 255, 255, 0.7);
}

h1 {
    position: absolute;
    top: 50%;
    width: 100%;
    transform: translatey(-50%);
    text-transform: uppercase;
    font-size: 1.5rem;
    font-weight: bold;
    text-align: center;
}

main {
    height: 130vh;
    min-height: 400px;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

main::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 400px;
    background-image: url(/images/galeria/IMG_20190922_152740.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    z-index: -100;
}

section {
    height: 29%;
    display: flex;
    flex-direction: column;
    transition: .5s linear;
    opacity: 0;
    transform: translateX(-100vw);
}

section.active {
    transform: translateX(0);
    opacity: 1;
}

.left {
    position: relative;
    flex-basis: 20%;
    background-color: rgb(243, 232, 207);
}

.left h2 {
    position: absolute;
    top: 50%;
    width: 100%;
    transform: translatey(-50%);
    font-size: 1.25rem;
    text-transform: uppercase;
    text-align: center;
    font-weight: bold;
}

.right {
    flex-basis: 80%;
    display: flex;
    align-items: center;
    text-align: center;
    padding: 10px;
    font-size: 0.9rem;
    text-align: center;
    background-image: linear-gradient(rgb(252, 223, 200), rgb(243, 201, 192));
    border-top: 4px solid rgb(0, 0, 0);
}

footer {
    height: 25vh;
    min-height: 90px;
    background-color: black;
    color: white;
    display: flex;
    flex-direction: column;
    position: relative;
}

.footerleft {
    flex-basis: 20%;
    position: relative;
}

.footerleft h2 {
    text-align: center;
    position: absolute;
    top: 75%;
    width: 100%;
    transform: translatey(-50%);
    font-size: 1rem;
    text-transform: uppercase;
    font-weight: bold;
}

.footerright {
    flex-basis: 80%;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

footer ul {
    padding-left: 10px;
    font-size: 0.9rem;
}

footer a {
    color: white;
    transition: .2s linear;
}

footer a:hover i {
    color: royalblue;
}

footer li {
    border-left: 1px solid white;
    padding: 0 10px;
}

footer i {
    padding-right: 5px;
    transition: .2s linear;
}

@media (orientation:portrait) and (min-width:360px) {

    .burger {
        top: 40px;
        right: 30px;
        width: 40px;
        height: 40px;
    }

    .burger i {
        font-size: 1.3rem;
    }

    h1 {
        font-size: 2rem;
    }

    nav a {
        font-size: 1.1rem;
    }

    .left h2 {
        font-size: 1.5rem;
    }

    .right {
        font-size: 1rem;
        padding: 10px 15px;
    }

    .footerleft {
        flex-basis: 30%;
    }

    .footerleft h2 {
        font-size: 1.25rem;
    }

    .footerright {
        flex-basis: 70%;
    }

    footer ul {
        padding-left: 10px;
    }

}

@media  (min-width:700px) {

    .burger {
        top: 40px;
        right: 40px;
        width: 50px;
        height: 50px;
    }

    .burger i {
        font-size: 1.6rem;
    }

}

@media (orientation:portrait) and (min-width:500px) {

    h1 {
        font-size: 2.1rem;
    }

    nav a {
        font-size: 1.25rem;
    }

    .left h2 {
        font-size: 1.6rem;
    }

    .right {
        font-size: 1.1rem;
    }
}

@media (min-height:700px),
(min-width:700px) {

    nav a {
        font-size: 1.4rem;
    }

    h1 {
        font-size: 2.4rem;
    }

    .left h2 {
        font-size: 1.8rem;
    }

    .right {
        font-size: 1.2rem;
    }

    .footerleft h2 {
        font-size: 1.3rem;
    }

    footer ul {
        font-size: 1.1rem;
    }
}

@media (orientation:landscape) {

    .title {
        height: 20%;
    }

    section {
        flex-direction: row;
    }

    .left {
        flex-basis: 30%;
        border-right: 4px solid rgb(255, 255, 255)
    }

    .right {
        flex-basis: 70%;
        border: none;
    }

    footer {
        flex-direction: row;
    }

    .footerleft {
        flex-basis: 30%;
    }

    .footerleft h2 {
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
    }

    .footerright {
        flex-basis: 70%;
    }

}

@media (min-width: 1024px) {
    nav a {
        font-size: 1.5rem;
    }

    h1 {
        font-size: 2.6rem;
    }

    .left h2 {
        font-size: 2rem;
    }

    .right {
        font-size: 1.3rem;
    }

    .footerleft h2 {
        font-size: 1.5rem;
    }

    footer ul {
        font-size: 1.2rem;
    }
}

@media (min-width: 1280px) {
    .burger {
        right: 10vw;
    }
}

